creusot/tests/should_fail/prusti/logic/lifetime_mismatch2.rs
extern crate creusot_contracts;
use creusot_contracts::prusti_prelude::*;

#[logic(('x) -> 'x)]
fn test<'a: 'b, 'b: 'a, 'c, X>(x: &'c mut &'a mut X) -> &'c mut &'b mut X {
    x
}
